--- a/SSAANIP/userMgmt.xaml
+++ b/SSAANIP/userMgmt.xaml
@@ -51,6 +51,7 @@
             </Grid>
 
         </Grid>
+        <PasswordBox Name="pwdChange" Visibility="Hidden" HorizontalAlignment="Left" Height="32" Margin="150,175,0,0" VerticalAlignment="Top" Width="112"/>
 
 
 
