--- a/SSAANIP/userMgmt.xaml
+++ b/SSAANIP/userMgmt.xaml
@@ -7,7 +7,6 @@
       mc:Ignorable="d" 
       d:DesignHeight="414" d:DesignWidth="865"
       Background="White">
-
     <Grid Width="865" Height="414">
         <Label Name="lblUserName" Content="Username: " HorizontalAlignment="Left" Height="25" Margin="32,41,0,0" VerticalAlignment="Top" Width="102"/>
         <Button Name="btnLogout" Content="Logout" HorizontalAlignment="Left" Height="28" Margin="32,74,0,0" VerticalAlignment="Top" Width="102" Click="btnLogout_Click"/>
@@ -19,9 +18,7 @@
         <TextBox Name="txtNewPassword" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="28" Margin="150,74,0,0" TextWrapping="Wrap" Text="New Password" VerticalAlignment="Top" Width="112"/>
         <Label Content="Change password" HorizontalAlignment="Left" Height="28" Margin="150,41,0,0" VerticalAlignment="Top" Width="112"/>
         <Button Name="btnChangePassword" Content="Update" HorizontalAlignment="Left" Height="35" Margin="150,116,0,0" VerticalAlignment="Top" Width="112" Click="btnChangePassword_Click"/>
-
-
-        <Grid Name="adminPanel" Visibility="Hidden">
+        <Grid Name="adminPanel" Visibility="Hidden" >
             <!--User creation-->
             <Label Content="Add user" HorizontalAlignment="Left" HorizontalContentAlignment="Center" Height="38" Margin="272,16,0,0" VerticalAlignment="Top" Width="108"  FontWeight="Bold" FontSize="16"/>
             <Label Content="Username:" HorizontalAlignment="Left" Height="25" Margin="272,41,0,0" VerticalAlignment="Top" Width="108" />
@@ -33,7 +30,7 @@
             <Button Name="btnAddUser" Content="Add User" HorizontalAlignment="Left" Height="27" Margin="287,226,0,0" VerticalAlignment="Top" Width="73" Click="btnAddUser_Click" />
             <CheckBox Name="checkBoxAdmin" Content="CheckBox" HorizontalAlignment="Left" Height="14" Margin="360,207,0,0" VerticalAlignment="Top" Width="20"/>
             <Label Content="Admin" HorizontalContentAlignment="Right" HorizontalAlignment="Left" Height="25" Margin="272,201,0,0" VerticalAlignment="Top" Width="83"/>
-            <Label Name="lblOutput" Content="" HorizontalAlignment="Left" Height="30" Margin="272,276,0,0" VerticalAlignment="Top" Width="108"/>
+            <TextBox Name="txtOutput" IsReadOnly="True" BorderBrush="Transparent" TextWrapping="Wrap" HorizontalAlignment="Left" Height="61" Margin="272,276,0,0" VerticalAlignment="Top" Width="108"/>
             <!--User Management-->
             <Label Content="Users" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="410,16,0,0" VerticalAlignment="Top" Width="180" FontWeight="Bold" FontSize="16"/>
             <ListBox Name="lsUserNames" BorderThickness="1" HorizontalAlignment="Left" Margin="410,54,0,47" Width="180" SelectionChanged="lsUserNames_SelectionChanged" />
@@ -41,21 +38,14 @@
                 <Label Content="Username" HorizontalAlignment="Left" Height="24" Margin="23,5,0,0" VerticalAlignment="Top" Width="162"/>
                 <TextBox Name="txtDisplayUserName" HorizontalAlignment="Left" VerticalContentAlignment="Center" Height="33" Margin="23,29,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162"/>
                 <CheckBox Name="ckbIsAdmin" Content="User is an admin" HorizontalAlignment="Left" Height="18" Margin="23,80,0,0" VerticalAlignment="Top" Width="112"/>
-
                 <Label Content="Password" HorizontalAlignment="Left" Height="30" Margin="24,94,0,0" VerticalAlignment="Top" Width="96"/>
                 <TextBox Name="txtPasswordEdit" Text="New password" HorizontalAlignment="Left" Height="24" Margin="24,124,0,0" VerticalAlignment="Top" Width="161"/>
                 <CheckBox Name="ckbChangePassword" Content="Change password" HorizontalAlignment="Left" Height="18" Margin="24,155,0,0" VerticalAlignment="Top" Width="120"/>
-
                 <Button Name="btnDeleteUser" Content="Delete User" Background="Red" Foreground="White"  HorizontalAlignment="Left" Height="30" Margin="23,340,0,0" VerticalAlignment="Top" Width="81" Click="btnDeleteUser_Click"/>
                 <Button Name="btnSaveData" Content="Save" VerticalContentAlignment="Top" HorizontalAlignment="Left" Height="18" Margin="160,155,0,0" VerticalAlignment="Top" Width="55" Click="btnSaveData_Click"/>
             </Grid>
-
         </Grid>
         <PasswordBox Name="pwdChange" Visibility="Hidden" HorizontalAlignment="Left" Height="32" Margin="150,175,0,0" VerticalAlignment="Top" Width="112"/>
-
-
-
-
     </Grid>
 
 </Page>
